[gd_scene load_steps=2 format=3 uid="uid://4upnysgx32r2"]

[ext_resource type="Script" path="res://components/enemy_spawn_manager.gd" id="1_2y63u"]

[node name="EnemySpawnManager" type="Node3D"]
script = ExtResource("1_2y63u")

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
